# EPAM_C-_LEARNPATH

./: .gitignore  AGENTS.md  CMakeLists.txt
Desigin_pattern/: CMakeLists.txt
Desigin_pattern/Creational_patterns/: Builder_Pattern.cpp  CMakeLists.txt  abstract_factory.cpp  decorators.cpp  factory_method.cpp  mayers_singleton.cpp  observer.cpp  simple_factory.cpp  singleton.cpp
GC_Practice/: CMakeLists.txt  Producer_Consumer.cpp  Producer_consumer_atomic.cpp  promise_future_async_packaged_task.cpp
MeetingTask/: CMakeLists.txt  const_pointers.c
Mid_term_Practice/: CMakeLists.txt  Intialiser_List.cpp  NoExpect_overload.cpp  RVO_Check.cpp  RuleOf5.cpp  Varaidic_template.cpp  auto.cpp  callable.cpp  namespace.cpp
Module1/: CMakeLists.txt
Module1/Arrays/: CMakeLists.txt  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp
Module1/File_Managment/: CMakeLists.txt
Module1/File_Managment/Task_1/: CMakeLists.txt  task1.c
Module1/File_Managment/Task_3/: CMakeLists.txt  task3.cpp
Module1/File_Managment/Task_5/: CMakeLists.txt  file_management_task_5.cpp
Module1/Functions/: CMakeLists.txt  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp
Module1/control_flow/: CMakeLists.txt  Task1.cpp  Task2.cpp  Task3.cpp
Module1/operators/: CMakeLists.txt  Task1.cpp  Task2.cpp  Task3.cpp
Module1/pointers/: CMakeLists.txt  Task1.c  Task2.c  Task3.c  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp
Module1/pointers,Arrays,basics/: arrays.cpp  arrays_with_functions.cpp  grade_checker.cpp  pointer_task2.c  pointers.cpp  reccursive_directory_traversal.cpp  sorting.cpp  stair_case.cpp  twod_arrays.cpp
Module1/pointers_Arrays_basics/: CMakeLists.txt  functions.cpp  matrix.cpp  reverse.cpp  search.cpp  structures.c  taylor.cpp
Module1/preproccesor_directives/: CMakeLists.txt  config.h  debug.h  env.h  logger.h  main.cpp  myheader.h  task1.h  test.cpp
Module1/prinf_scanf_formatspecifier/: CMakeLists.txt  Task1.cpp
Module1/reccursion/: CMakeLists.txt  Task1.cpp  Task2.cpp
Module1/structures/: CMakeLists.txt  structures.cpp
Module1/variables/: CMakeLists.txt  Task1.cpp  Task2.cpp
Module11/: CMakeLists.txt
Module11/CRT/: CMakeLists.txt  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp
Module11/Crash_Dump_Analysis/: CMakeLists.txt  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp
Module11/Linux_Crash_Dump_Analysis/: CMakeLists.txt  Task10.cpp  Task11  Task11.cpp  (+15 more)
Module2/: CMakeLists.txt
Module2/Basic_Memory_Management/: CMakeLists.txt  Operator_Overloading.cpp  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp
Module2/Introduction/: CMakeLists.txt  CopyConstructors.cpp  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp  Task8.cpp  Task9.cpp
Module2/oop/: CMakeLists.txt  Task10.cpp  Task11.cpp  Task12.cpp  Task13.cpp  Task14.cpp  Task2.cpp  Task7.cpp  Task8.cpp  oops.cpp  task1.cpp  task3.cpp  task3.h  task4.cpp  task5.cpp  task6.cpp  task9.cpp  temp.cpp
Module3/: CMakeLists.txt
Module3/Polymorphism/: CMakeLists.txt  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp  Task8.cpp  Task9.cpp  temp.cpp
Module3/Virtual_Inheritance/: CMakeLists.txt  Task1.cpp  Task10.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp  Task8.cpp  Task9.cpp
Module4/: CMakeLists.txt
Module4/Exception_Handling/: CMakeLists.txt  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp
Module4/Streams/: CMakeLists.txt  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task4_input_file.txt  Task4_output_file.txt  Task5.cpp  Task6.cpp  Task6_Input_file.txt  Task7.cpp  Task8.cpp  Task9.cpp
Module5/: CMakeLists.txt
Module5/Practice/Templates/: CMakeLists.txt  MyVector.cpp  basics.cpp  fold_or_reccursive.cpp  forward.cpp  forward_with_non_template.cpp  forwarding_refrences.cpp  prac.cpp  temp.cpp  variadic_template.cpp
Module5/Template_Namespace/: CMakeLists.txt  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp
Module6/: CMakeLists.txt
Module6/CallBack_Functor_Lambda/: CMakeLists.txt  Task1.cpp  Task10.cpp  Task11.cpp  Task12.cpp  Task13.cpp  Task14.cpp  Task15.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp  Task8.cpp  Task9.cpp
Module6/Move_Semantics/: CMakeLists.txt  Task1.cpp  Task10.cpp  Task11.cpp  Task12.cpp  Task13.cpp  Task14.cpp  Task15.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp  Task8.cpp  Task9.cpp
Module6/RAII_PIMPL/: CMakeLists.txt  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task6.h
Module6/RAII_PIMPL/Task10/: CMakeLists.txt  NetworkConnection.cpp  NetworkConnection.h  main.cpp
Module6/RAII_PIMPL/Task7/: CMakeLists.txt  Task7.cpp  Widget.cpp  Widget.h
Module6/RAII_PIMPL/Task8/: CMakeLists.txt  Task8.cpp  Widget.cpp  Widget.h
Module6/RAII_PIMPL/Task9/: CMakeLists.txt  bigdata.cpp  bigdata.h  main.cpp
Module7/: CMakeLists.txt
Module7/Memory_Management/: CMakeLists.txt  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp
Module8/: CMakeLists.txt  Task1.cpp  Task10.cpp  Task11.cpp  Task12.cpp  Task13.cpp  Task14.cpp  Task15.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp  Task8.cpp  Task9.cpp
Module8/Practice/: Array_Container.cpp  CMakeLists.txt  vector_container.cpp
Module9/MultiThreading_Synchronisation/: CMakeLists.txt  Task1.cpp  Task10.cpp  Task11.cpp  Task12.cpp  Task13.cpp  Task14.cpp  Task15.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp  Task8.cpp  Task9.cpp
Module9/Practice/: Barrier.cpp  CMakeLists.txt  Latch.cpp  Producre_consumer.cpp  concept.cpp  delete_delete[]_behaviour.cpp  future.cpp  future_destructor_behaviour.cpp  join_detach.cpp  practice1.cpp  practice2.cpp  practice3.cpp  practice4.cpp  practice5.cpp  semaphore.cpp  struct.cpp  try_lock.cpp
OOP/: CMakeLists.txt
STL/: CMakeLists.txt  PriorityQueue.cpp  deque.cpp  pair.cpp  que.cpp  set.cpp  stack.cpp  stringss.cpp  temp.cpp  vector.cpp  virtual_upcast.cpp  virtual_upcast.h
(+82 files in other folders)
