
cmake_minimum_required(VERSION 4.1)
project(CppLearning)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(Module1/pointers_arrays_basics)
add_subdirectory(Module1/File_Managment/Task_3)
add_subdirectory(Module1/preproccesor_directives)
add_subdirectory(Module1/File_Managment/Task_5)
add_subdirectory(Module1/File_Managment/Task_1)