
cmake_minimum_required(VERSION 4.1)
project(CppLearning)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(Module1)
add_subdirectory(Module2)
add_subdirectory(Module3)
add_subdirectory(Module4)
add_subdirectory(Module5)
add_subdirectory(Module6)
add_subdirectory(Module7)
add_subdirectory(Module8)
add_subdirectory(Module9)
add_subdirectory(Module11)
add_subdirectory(Mid_term_Practice)
add_subdirectory(GC_Practice)
add_subdirectory(STL)
add_subdirectory(OOP)
add_subdirectory(MeetingTask)
add_subdirectory(Desigin_pattern)