add_subdirectory(Arrays)
add_subdirectory(control_flow)
add_subdirectory(File_Managment)
add_subdirectory(operators)
add_subdirectory(pointers)
add_subdirectory(preproccesor_directives)
add_subdirectory(prinf_scanf_formatspecifier)
add_subdirectory(reccursion)
add_subdirectory(structures)
add_subdirectory(variables)
