add_executable(Desingn_pattern_Creational_patterns_simple_factory simple_factory.cpp)
add_executable(Desingn_pattern_Creational_patterns_factory_method factory_method.cpp)
add_executable(Desingn_pattern_Creational_patterns_Builder_pattern Builder_Pattern.cpp)
add_executable(Desingn_pattern_Creational_patterns_mayers_singleton mayers_singleton.cpp)
add_executable(Desingn_pattern_Creational_patterns_singleton singleton.cpp)
add_executable(Desingn_pattern_Creational_patterns_observer observer.cpp)
add_executable(Desingn_pattern_Creational_patterns_decorators decorators.cpp)
