add_executable(arrays arrays.cpp structures.c)

add_executable(arrays_with_functions arrays_with_functions.cpp)
add_executable(functions functions.cpp)
add_executable(grade_checker grade_checker.cpp)
add_executable(matrix matrix.cpp)
add_executable(pointer_task_3 pointer_task_3.cpp)
add_executable(pointers pointers.cpp)
add_executable(pointer_task2 pointer_task2.c)
add_executable(reccursive_directory_traversal reccursive_directory_traversal.cpp)
add_executable(reverse reverse.cpp)
add_executable(search search.cpp)
add_executable(sorting sorting.cpp)
add_executable(stair_case stair_case.cpp)
add_executable(taylor taylor.cpp)
add_executable(twod_arrays twod_arrays.cpp)
