add_executable(copy_constructor CopyConstructors.cpp)
add_executable(module2_intro_task1 Task1.cpp)
add_executable(module2_intro_task2 Task2.cpp)
add_executable(module2_intro_task3 Task3.cpp)
add_executable(module2_intro_task4 Task4.cpp)
add_executable(module2_intro_task5 Task5.cpp)
add_executable(module2_intro_task6 Task6.cpp)
add_executable(module2_intro_task7 Task7.cpp)
add_executable(module2_intro_task8 Task8.cpp)
add_executable(module2_intro_task9 Task9.cpp)