add_executable(Module_2_OOP_task1  task1.cpp)
add_executable(Module_2_OOP_task2  Task2.cpp)
add_executable(Module_2_OOP_task3 task3.cpp)
add_executable(Module_2_OOP_task4 task4.cpp)
add_executable(Module_2_OOP_task5 task5.cpp)
add_executable(Module_2_OOP_task6 task6.cpp)
add_executable(Module_2_OOP_task7 task7.cpp)
add_executable(Module_2_OOP_task8 task8.cpp)
add_executable(Module_2_OOP_task9 task9.cpp)
add_executable(Module_2_OOP_task10 Task10.cpp)
add_executable(Module_2_OOP_task11 Task11.cpp)
add_executable(Module_2_OOP_task12 Task12.cpp)
add_executable(Module_2_OOP_task13 Task13.cpp)
add_executable(Module_2_OOP_task14 Task14.cpp)
add_executable(tempp temp.cpp)