add_executable("Module3_Polymorphism_Task1" Task1.cpp)
add_executable("Module3_Polymorphism_Task2" Task2.cpp)
add_executable("Module3_Polymorphism_Task3" Task3.cpp)
add_executable("Module3_Polymorphism_Task4" Task4.cpp)
add_executable("Module3_Polymorphism_Task5" Task5.cpp)
add_executable("Module3_Polymorphism_Task6" Task6.cpp)
add_executable("Module3_Polymorphism_Task7" Task7.cpp)
add_executable("Module3_Polymorphism_Task8" Task8.cpp)
add_executable("Module3_Polymorphism_Task9" Task9.cpp)
add_executable("Module3_Polymorphism_temp" temp.cpp)
