add_executable("Module4_Streams_Task1"  Task1.cpp)
add_executable("Module4_Streams_Task2"  Task2.cpp)
add_executable("Module4_Streams_Task3"  Task3.cpp)
add_executable("Module4_Streams_Task4"  Task4.cpp)
add_executable("Module4_Streams_Task5"  Task5.cpp)
add_executable("Module4_Streams_Task6"  Task6.cpp)
add_executable("Module4_Streams_Task7"  Task7.cpp)
add_executable("Module4_Streams_Task8"  Task8.cpp)
add_executable("Module4_Streams_Task9"  Task9.cpp)