add_executable(Move_Semantics_Task1 Task1.cpp)
add_executable(Move_Semantics_Task2 Task2.cpp)
add_executable(Move_Semantics_Task3 Task3.cpp)
add_executable(Move_Semantics_Task4 Task4.cpp)
add_executable(Move_Semantics_Task5 Task5.cpp)
add_executable(Move_Semantics_Task6 Task6.cpp)
add_executable(Move_Semantics_Task7 Task7.cpp)
add_executable(Move_Semantics_Task8 Task8.cpp)
add_executable(Move_Semantics_Task9 Task9.cpp)
add_executable(Move_Semantics_Task10 Task10.cpp)
add_executable(Move_Semantics_Task11 Task11.cpp)
add_executable(Move_Semantics_Task12 Task12.cpp)
add_executable(Move_Semantics_Task13 Task13.cpp)
add_executable(Move_Semantics_Task14 Task14.cpp)