add_executable(Module6_RAII_PIMPL_Task1 Task1.cpp)
add_executable(Module6_RAII_PIMPL_Task2 Task2.cpp)
add_executable(Module6_RAII_PIMPL_Task3 Task3.cpp)
add_executable(Module6_RAII_PIMPL_Task4 Task4.cpp)
add_executable(Module6_RAII_PIMPL_Task5 Task5.cpp)
add_executable(Module6_RAII_PIMPL_Task6 Task6.cpp)
add_subdirectory(Task7)
add_subdirectory(Task8)
add_subdirectory(Task9)
add_subdirectory(Task10)