add_executable(Module7_Memory_Management_Task1 Task1.cpp)
add_executable(Module7_Memory_Management_Task2 Task2.cpp)
add_executable(Module7_Memory_Management_Task3 Task3.cpp)
add_executable(Module7_Memory_Management_Task4 Task4.cpp)
add_executable(Module7_Memory_Management_Task5 Task5.cpp)
add_executable(Module7_Memory_Management_Task6 Task6.cpp)
add_executable(Module7_Memory_Management_Task7 Task7.cpp)
