add_executable(Module9_MultiThreading_Synchronisation_Task1 Task1.cpp)
add_executable(Module9_MultiThreading_Synchronisation_Task2 Task2.cpp)
add_executable(Module9_MultiThreading_Synchronisation_Task3 Task3.cpp)
add_executable(Module9_MultiThreading_Synchronisation_Task4 Task4.cpp)
add_executable(Module9_MultiThreading_Synchronisation_Task5 Task5.cpp)
add_executable(Module9_MultiThreading_Synchronisation_Task6 Task6.cpp)
add_executable(Module9_MultiThreading_Synchronisation_Task7 Task7.cpp)
add_executable(Module9_MultiThreading_Synchronisation_Task8 Task8.cpp)
add_executable(Module9_MultiThreading_Synchronisation_Task9 Task9.cpp)
add_executable(Module9_MultiThreading_Synchronisation_Task10 Task10.cpp)
add_executable(Module9_MultiThreading_Synchronisation_Task11 Task11.cpp)
add_executable(Module9_MultiThreading_Synchronisation_Task12 Task12.cpp)
add_executable(Module9_MultiThreading_Synchronisation_Task13 Task13.cpp)
add_executable(Module9_MultiThreading_Synchronisation_Task14 Task14.cpp)
add_executable(Module9_MultiThreading_Synchronisation_Task15 Task15.cpp)